--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <audio id="tada" src="sounds/tada.mp3"></audio>
     <audio id="victory" src="sounds/victory.mp3"></audio>
     <audio id="wrong" src="sounds/wrong.mp3"></audio>
+    <audio id="womp womp" src="sounds/womp womp.mp3"></audio>
     <!-- This will be a container for the buttons which we will generate via JavaScript -->
 
     <div id="buttons"></div>
